force-app/main/default/objects/Feedback__c/fields/Ambience__c.field-meta.xml
<CustomField>
    <fullName>Ambience__c</fullName>
    <label>Ambience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>