force-app/main/default/objects/Feedback__c/fields/Cleanliness_Hygiene__c.field-meta.xml
<CustomField>
    <fullName>Cleanliness_Hygiene__c</fullName>
    <label>Cleanliness &amp; Hygiene</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>