force-app/main/default/objects/Feedback__c/fields/Ease_of_Understanding_the_Product__c.field-meta.xml
<CustomField>
    <fullName>Ease_of_Understanding_the_Product__c</fullName>
    <label>Ease of Understanding the Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>