force-app/main/default/objects/Feedback__c/fields/Please_Specify_Other_City__c.field-meta.xml
<CustomField>
    <fullName>Please_Specify_Other_City__c</fullName>
    <label>Please Specify Other City</label>
    <length>50</length>
    <type>Text</type>
</CustomField>