force-app/main/default/objects/Feedback__c/fields/Please_Specify_Other_Referral_Source__c.field-meta.xml
<CustomField>
    <fullName>Please_Specify_Other_Referral_Source__c</fullName>
    <label>Please Specify Other Referral Source</label>
    <length>100</length>
    <type>Text</type>
</CustomField>