force-app/main/default/objects/Feedback__c/fields/Product_Display__c.field-meta.xml
<CustomField>
    <fullName>Product_Display__c</fullName>
    <label>Product Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>