force-app/main/default/objects/Feedback__c/fields/Product_Impressions__c.field-meta.xml
<CustomField>
    <fullName>Product_Impressions__c</fullName>
    <label>Product Impressions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Design &amp; Aesthetics</fullName>
            </value>
            <value>
                <fullName>German Engineering</fullName>
            </value>
            <value>
                <fullName>Rebated Sound Proof Technology</fullName>
            </value>
            <value>
                <fullName>Customization Option</fullName>
            </value>
            <value>
                <fullName>Innovation in Mechanism</fullName>
            </value>
            <value>
                <fullName>Look, Feel &amp; Finish</fullName>
            </value>
            <value>
                <fullName>All the above</fullName>
                <isActive>false</isActive>
                <label>All the above</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>