force-app/main/default/objects/Feedback__c/fields/Purchase_Intent__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Intent__c</fullName>
    <label>Purchase Intent</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>