force-app/main/default/objects/Feedback__c/fields/Referral_Sources__c.field-meta.xml
<CustomField>
    <fullName>Referral_Sources__c</fullName>
    <label>Referral Sources</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Instagram/Social Media</fullName>
            </value>
            <value>
                <fullName>Google Search</fullName>
            </value>
            <value>
                <fullName>Architects</fullName>
            </value>
            <value>
                <fullName>Builders</fullName>
            </value>
            <value>
                <fullName>Interior Designers</fullName>
            </value>
            <value>
                <fullName>Delight Studio Store</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>