force-app/main/default/objects/Feedback__c/fields/Staff_Courtesy_Knowledge__c.field-meta.xml
<CustomField>
    <fullName>Staff_Courtesy_Knowledge__c</fullName>
    <label>Staff Courtesy &amp; Knowledge</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Rating</valueSetName>
    </valueSet>
</CustomField>